# kata_supermarketReceipt_refactoring_python

./: .pre-commit-config.yaml  pyproject.toml
supermarket_receipt/: shopping_cart.py  teller.py  texttest_fixture.py
tests/: receipt_printer.py  test_supermarket.py
